Fix vertical scrollbar

--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ body {
     justify-content: center;
     height: 100vh;
     text-align: center;
-    padding: 1rem;
+    padding: 0rem 1rem;
 }
 .card {
     background: #fffaf7;
